deployment-web.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: web-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: web-app
spec:
  replicas: 100
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: backend-java-fcgi:v6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: web-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: apache-frontend:v8
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: httpd-config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
              readOnly: true
      volumes:
        - name: httpd-config
          configMap:
            name: httpd-config
            items:
              - key: httpd.conf
                path: httpd.conf
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: web-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress-route
  namespace: web-app
spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend-service
          port: 80
